# copy-sync

./: Cargo.toml  README.md
src/: client.rs  config.rs  main.rs  notify.rs  server.rs
