[package]
name = "copy-sync"
version = "0.1.0"
edition = "2021"
authors = ["tan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.1.8", features = ["derive"] }
futures-channel = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["io-std", "macros", "net", "rt-multi-thread", "time"]}
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
