[package]
name = "copy-sync"
version = "0.3.0"
edition = "2021"
authors = ["tan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.1.8", features = ["derive"] }
flate2 = "1.0.26"
futures-channel = "0.3.26"
futures-util = "0.3.26"
notify-rust = "4.8.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.25.0", features = ["io-std", "macros", "net", "rt-multi-thread", "time"]}
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
ulid = "1.0.0"
